--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:src="@drawable/new_zealand_rugby_logo"
+                android:src="@drawable/blue_a"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="8dp"/>
 
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="New Zealand"
+                android:text="@string/teamA"
                 android:padding="8dp"
                 android:textSize="20sp"
                 android:textColor="#ffffff"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="0"
+                android:text="@string/TextviewTeamA"
                 android:paddingBottom="16dp"
                 android:textSize="56sp"
                 android:textColor="#ffffff"
@@ -57,7 +57,7 @@
                 android:id="@+id/team_a_try"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Try"
+                android:text="@string/buttonTryA"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -67,7 +67,7 @@
                 android:id="@+id/team_a_conversion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Conversion"
+                android:text="@string/buttonConversionA"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -77,7 +77,7 @@
                 android:id="@+id/team_a_penalty_kick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Penalty Kick"
+                android:text="@string/buttonPenalty_kickA"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -87,7 +87,7 @@
                 android:id="@+id/team_a_drop_goal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Drop Goal"
+                android:text="@string/buttonDrop_goalA"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -109,7 +109,7 @@
             <ImageView
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:src="@drawable/wales_rugby_logo"
+                android:src="@drawable/blue_b"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="8dp"/>
 
@@ -117,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="Wales"
+                android:text="@string/teamB"
                 android:padding="8dp"
                 android:textSize="20sp"
                 android:textColor="#ffffff"
@@ -128,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="0"
+                android:text="@string/TextviewTeamB"
                 android:paddingBottom="16dp"
                 android:textSize="56sp"
                 android:textColor="#ffffff"
@@ -138,7 +138,7 @@
                 android:id="@+id/team_b_try"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Try"
+                android:text="@string/buttonTryB"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -148,7 +148,7 @@
                 android:id="@+id/team_b_conversion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Conversion"
+                android:text="@string/buttonConversionB"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -158,7 +158,7 @@
                 android:id="@+id/team_b_penalty_kick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Penalty Kick"
+                android:text="@string/buttonPenalty_kickB"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -168,7 +168,7 @@
                 android:id="@+id/team_b_drop_goal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Drop Goal"
+                android:text="@string/buttonDrop_goalB"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="8dp"
@@ -181,7 +181,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset"
+        android:text="@string/buttonReset"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
